gcc/testsuite/g++.dg/parse/error13.C
// PR c++/13975

public: // { dg-error "" }

int i;

protected: // { dg-error "" }

int j;

private: // { dg-error "" }

int k;
